--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "knex": "^2.2.0",
     "mysql": "^2.18.1"
@@ -23,7 +24,5 @@
   "devDependencies": {
     "nodemon": "^2.0.19"
   },
-
-    "type": "module"
- 
+  "type": "module"
 }
