--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "heroku-ssl-redirect": "^0.1.1",
     "knex": "^2.2.0",
     "mysql": "^2.18.1"
   },
